fix: broken style in navbar.

--- a/dev/frontend/haomibo/src/assets/css/sass/themes/piaf.light.blue.scss
+++ b/dev/frontend/haomibo/src/assets/css/sass/themes/piaf.light.blue.scss
@@ -64,7 +64,7 @@ $nav-title-start: 9.375rem;
 $nav-auth-avatar-margin-end: 0px;
 
 $nav-auth-margin-end: 15rem;
-$nav-auth-top: 0.625;
+$nav-auth-top: 0.625rem;
 
 $nabvar-active-color: #1782d4;
 
